--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "react-scripts": "2.1.2",
     "react-thunk": "^1.0.0",
     "redux": "^4.0.1",
+    "redux-form": "^8.1.0",
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
